--- a/Homeworks/MMF_opt_hw.ipynb
+++ b/Homeworks/MMF_opt_hw.ipynb
@@ -379,7 +379,7 @@
    "id": "c7c32a66",
    "metadata": {},
    "source": [
-    "**Задание 3. (0.3 баллов)** Посмотрите на скорость сходимости (используйте логарифмическую шкалу) ISTA и FISTA при разных размерах шага. Выберите лучший, сделайте выводы. Рассмотрите не менее 5 размеров шагов в диапазоне $10^{-4}...1$. **Используйте не менее 30000 итераций**"
+    "**Задание 3. (0.3 баллов)** Посмотрите на скорость сходимости (используйте логарифмическую шкалу) ISTA и FISTA при разных размерах шага. Выберите лучший, сделайте выводы. Рассмотрите не менее 5 размеров шагов в диапазоне $10^{-5}...10^{-3}$. **Используйте не менее 30000 итераций**"
    ]
   },
   {
